<!--
    Copyright:
    2015/2016 Benjamin Aigner

    This file is part of AustrianPublicStream.

    AustrianPublicStream is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    AustrianPublicStream is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with AustrianPublicStream.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">PublicStream</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings - shared preferences names (used allover the app) -->
    <string name="SETTINGS_DOWNLOADFOLDER">settingDownloadFolder</string>
    <string name="SETTINGS_SHOW_PLAY_NOTIFICATION">settingPlayNotification</string>
    <string name="SETTINGS_SHOW_PAUSED_NOTIFICATION">settingPausedNotification</string>
    <string name="SETTINGS_SHOW_LOCKSCREEN_NOTIFICATION">settingLockscreenNotification</string>
    <string name="SETTINGS_REFETCH_INTERVAL">settingRefetchInterval</string>
    <string name="SETTINGS_HW_ACCELERATOR">settingUseHWAccel</string>
    <string name="SETTINGS_DOWNLOADNOTECANCEL">settingsDownloadNotificationCancel</string>

    <!-- Example General settings -->
    <string name="pref_about">Über diese App</string>

    <string name="pref_title_refetch_interval">Aktualisierung der Liste</string>
    <string name="pref_description_refetch_interval">Wie oft soll die Liste der Online Beiträge aktualisiert werden (Minuten)</string>

    <string name="pref_title_download_folder">Download - Ordner</string>
    <string name="pref_description_download_folder">Wohin sollen die Offline Beiträge gespeichert werden?</string>

    <string name="pref_title_usehw">Hardwarebeschleunigung</string>
    <string name="pref_description_usehw">Bei Problemen mit der Audiowiedergabe, deaktivieren (braucht aber etwas mehr Akku)</string>

    <string name="pref_title_play_notification">Benachrichtigung - Abspielen</string>
    <string name="pref_description_play_notification">Soll eine Benachrichtigung beim Abspielen angezeigt werden?</string>

    <string name="pref_title_pause_notification">Benachrichtigung - Pause</string>
    <string name="pref_description_pause_notification">Soll eine Benachrichtigung angezeigt werden wenn der Beitrag pausiert ist?</string>

    <string name="pref_title_lockscreen_notification">Benachrichtigung - Sperrbildschirm</string>
    <string name="pref_description_lockscreen_notification">Soll eine Benachrichtigung am Sperrbildschirm angezeigt werden? TBD; noch nicht implementiert</string>


    <string name="pref_title_download_note_cancel">Dauer der Downloadbenachrichtigung</string>
    <string name="pref_description_download_note_cancel">Wieviele Sekunden soll die Benachrichtigung bestehen bleiben nachdme der Download fertig ist?</string>

    <!-- about dialog -->
    <string name="about_title">Über diese App</string>
    <string name="about_message">Diese App wurde als Ersatz für die orginale Ö1 App des ORFs erstellt.\n
    BETA Version! \n\n
    Weitere Information sind auf GitHUB verfügbar:\n
    https://github.com/benjaminaigner/AustrianPublicStream\n\n
    Hinter dieser App stehen keine kommerziellen Interessen usw., sie wurde alleine aus Unzufriedenheit mit dem ORF entwickelt.
    Keine meiner Bugreports wurden jemals umgesetzt, also dachte ich mir ich mache einfach eine eigene App. \n\n
    Lizenz: GNU GPLv3\n\n
    Ein großes Dankeschön an alle Experten bei stackoverflow, ohne deren Tipps wäre es niemals soweit gekommen! \n\n
    Android Assets (Icons) wurden mit dem AndroidAssetStudio erzeugt und unterstehen der Creative Commons Attribution 3.0 Unported Lizenz:\n
    https://romannurik.github.io/AndroidAssetStudio \n\n
    Verwendete Libraries:\n
    ToxicBakery: transformer library (https://github.com/ToxicBakery/ViewPagerTransforms)\n
    VideoLAN: VLC library (https://wiki.videolan.org/Libvlc/)\n
    RomanNurik: Android Asset Studio (https://romannurik.github.io/AndroidAssetStudio/)
    </string>
</resources>
